--- a/source/app/components/wi-inventory/wi-inventory.html
+++ b/source/app/components/wi-inventory/wi-inventory.html
@@ -1,5 +1,7 @@
 <style>
     .inventory-side {
+        display:flex;
+        padding:0;
         flex-basis: calc(50% - 30px);
         border: 1px solid #ccc;
         border-radius: 5px;
@@ -16,7 +18,13 @@
 </style>
 <div class="inventory-main" style="display:flex;flex-direction:row;">
     <div class="inventory-side">
-        <wi-inventory-treeview name="projectTreeview" config="wiInventory.projectConfig" container="wiInventory" selected-node="wiInventory.projectSelectedNode"></wi-inventory-treeview>
+            <wi-base-treeview name="projectTreeview" 
+                config="wiInventory.projectConfig" 
+                container="wiInventory" 
+                on-click-function="wiInventory.clickFunction"
+                on-select-function="wiInventory.selectProjectNode">
+            </wi-base-treeview>
+        <!--<wi-inventory-treeview name="projectTreeview" config="wiInventory.projectConfig" container="wiInventory" selected-node="wiInventory.projectSelectedNode"></wi-inventory-treeview>-->
     </div>
     <div class="inventory-center">
         <button class="btn btn-default" style="padding:6px 6px;position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);"
@@ -25,9 +33,15 @@
             <span class="arrow-left-16x16"></span>
         </button>
     </div>
-    <div style="display:flex;padding:0;" class="inventory-side">
+    <div class="inventory-side">
         <wi-scroll style='flex:1;display:flex;flex-direction:column;' up-trigger="wiInventory.upTrigger" down-trigger="wiInventory.downTrigger">
-            <wi-treeview name="inventoryTreeview" config="wiInventory.inventoryConfig" container="wiInventory" selected-node="wiInventory.inventorySelectedNode"></wi-treeview>
+            <wi-base-treeview name="inventoryTreeview" 
+                config="wiInventory.inventoryConfig" 
+                container="wiInventory" 
+                on-click-function="wiInventory.clickFunction"
+                on-select-function="wiInventory.selectInventoryNode">
+            </wi-base-treeview>
+            <!--<wi-treeview name="inventoryTreeview" config="wiInventory.inventoryConfig" container="wiInventory" selected-node="wiInventory.inventorySelectedNode"></wi-treeview>-->
         </wi-scroll>
     </div>
 </div>
