--- a/source/app/components/wi-predict-model/template/predict.html
+++ b/source/app/components/wi-predict-model/template/predict.html
@@ -1,9 +1,9 @@
-<form ng-if="predict" ng-controller="predictFormController as predict" id="predict">
+<form id="predict">
     <h3>Predict</h3>
     <div class="form-group form-inline">
         <label class="control-label col-sm-3">Model name</label>
-        <select ng-options="x as x.name for x in predict.models track by x.id" 
-                ng-model="predict.model" 
+        <select ng-options="x as x.name for x in predictCtrl.models track by x.id" 
+                ng-model="predictCtrl.model" 
                 class="form-control wi-form-control"
                 required>
         </select>
@@ -11,40 +11,40 @@
     <div class="form-group form-inline container-fluid" style="padding-left: 0">
         <label class="control-label col-sm-3">Chose obs</label>
         <label class="col-sm-3">Well
-            <ui-select ng-model="predict.well"
-                        on-select="predict.changeWell()"
+            <ui-select ng-model="predictCtrl.well"
+                        on-select="predictCtrl.changeWell()"
                         class="normal-text">
                 <ui-select-match placeholder='Select a curve'>
-                    {{predict.well.name}}
+                    {{predictCtrl.well.name}}
                 </ui-select-match>
                 <ui-select-choices  position="down"
-                                    repeat='well in predict.wells | filter:{name:$select.search} track by well.idWell' >
+                                    repeat='well in predictCtrl.wells | filter:{name:$select.search} track by well.idWell' >
                     <div class="normal-text">{{well.name}}</div>
                 </ui-select-choices>
             </ui-select>
         </label>
         <label class="control-label col-sm-3">Dataset
-            <ui-select ng-model="predict.dataset"
-                on-select="predict.changeDateset()"
+            <ui-select ng-model="predictCtrl.dataset"
+                on-select="predictCtrl.changeDateset()"
                 class="normal-text">
                 <ui-select-match placeholder='Select a dataset'>
-                    {{predict.dataset.name}}
+                    {{predictCtrl.dataset.name}}
                 </ui-select-match>
                 <ui-select-choices  position="down"
-                                    repeat='dataset in predict.datasets | filter:{name:$select.search} track by dataset.idDataset' >
+                                    repeat='dataset in predictCtrl.datasets | filter:{name:$select.search} track by dataset.idDataset' >
                     <div class="normal-text">{{dataset.name}}</div>
                 </ui-select-choices>
             </ui-select>
         </label>
         <label class="control-label col-sm-3">Curve
-            <ui-select ng-model="predict.curve"
-                        on-select="predict.changeCurve()"
+            <ui-select ng-model="predictCtrl.curve"
+                        on-select="predictCtrl.changeCurve()"
                         class="normal-text">
                 <ui-select-match placeholder='Select a curve'>
-                    {{predict.curve.name}}
+                    {{predictCtrl.curve.name}}
                 </ui-select-match>
                 <ui-select-choices  position="down"
-                                    repeat='curve in predict.curves | filter:{name:$select.search} track by curve.idCurve' >
+                                    repeat='curve in predictCtrl.curves | filter:{name:$select.search} track by curve.idCurve' >
                     <div class="normal-text">{{curve.name}}</div>
                 </ui-select-choices>
             </ui-select>
@@ -52,9 +52,9 @@
     </div>
     <!-- <div class="form-group form-inline">
         <label class="col-sm-3">Observation set</label>
-        <input type="file" accept=".csv" on-read-file="predict.read_data($fileContent)" required>
+        <input type="file" accept=".csv" on-read-file="predictCtrl.read_data($fileContent)" required>
     </div>-->
     <div class="form-group form-inline">
-        <button class="btn btn-primary" ng-click="predict.predict()">Predict</button>
+        <button class="btn btn-primary" ng-click="predictCtrl.predict()">Predict</button>
     </div> 
 </form> 
