--- a/source/components/wi-multi-input/wi-multi-input.html
+++ b/source/components/wi-multi-input/wi-multi-input.html
@@ -26,7 +26,7 @@
             <ui-select ng-model="wiMultiInput.SelectedCurve" ng-change="wiMultiInput.onSelectCurveChange()" class="normal-text"
             ng-disabled="wiMultiInput.model.type == 'value'" class="form-control wi-form-control">
                 <ui-select-match placeholder='Select a curve'>{{wiMultiInput.SelectedCurve.properties.name}}</ui-select-match>
-                <ui-select-choices group-by="'datasetName'"
+                <ui-select-choices group-by="wiMultiInput.groupFn"
                 repeat='curve in wiMultiInput.curvesList | filter:{properties: {name:$select.search}} track by curve.id'>
                     <div class="padding-left-20px">{{curve.properties.name}}</div>
                 </ui-select-choices>
