--- a/source/components/wi-list/wi-list.less
+++ b/source/components/wi-list/wi-list.less
@@ -45,6 +45,10 @@ wi-list {
 				select {
 					margin-left: -4px;
 				}
+				button {
+					padding: 3px;
+					margin: -3px;
+				}
 			}
 			td:first-child {
 				flex: 2;
