--- a/source/less/dialogs.less
+++ b/source/less/dialogs.less
@@ -23,6 +23,8 @@ img {
 
 .modal-body{
 	padding: 5px 25px;
+	max-height: calc(~"100% - 150px");
+	overflow: auto;
 	h5{
 		margin:10px 0 20px 0; 
 		position: relative;
