add scale info to logplot toolbar

--- a/source/app/components/wi-logplot/wi-logplot.less
+++ b/source/app/components/wi-logplot/wi-logplot.less
@@ -10,15 +10,22 @@ wi-logplot {
             border: none;
             padding: 4px 0 0 0;
         }
+        .scale {
+            display: inline-block;
+            margin: 0 1em;
+            line-height: 32px;
+        }
     }
 
-    .logplot-well-name {
+    .logplot-header {
         margin: 0px 4px;
-        padding: 2px;
         background-color: rgb(136, 204, 136);
         text-align: center;
-        font-size: 14px;
-        font-weight: bold;
+        line-height: 2em;
+        .well-name {
+            font-size: 14px;
+            font-weight: bold;
+        }
     }
 
     .logplot-main-content {
