--- a/source/components/wi-base-treeview/wi-base-treeview.html
+++ b/source/components/wi-base-treeview/wi-base-treeview.html
@@ -22,7 +22,7 @@
                 <div class="display-inline-block margin-right-0_5em"><span class="{{item.data.icon}}"></span></div>
                 <span ng-if="wiBaseTreeview.isShowParentName && item.parentData">{{item.parentData.label}} /</span>
                 <span ng-if="wiBaseTreeview.isShowParentName && item.parentDataArr" ng-repeat="parentData in item.parentDataArr">{{parentData.label}} /&nbsp;</span>
-                <span title="{{item.data.label}}">{{item.data.label}}</span>
+                <span title="{{item.data.toggle?item.data.label:item.data.tooltip}}">{{item.data.toggle?item.data.tooltip:item.data.label}}</span>
                 <div class="pull-right actions">
                     <wi-button ng-repeat="action in item.actions" icon="{{action.icon}}" handler="action.handler" label="{{action.label}}"></wi-button>
                 </div>
