--- a/source/less/simpleLayout.less
+++ b/source/less/simpleLayout.less
@@ -12,6 +12,10 @@ div.lm_content {
 span.ui-select-toggle {
     width: 100%;
 }
+div.panel-default, div.panel-default>div.panel-heading {
+    border-color: #888;
+}
+
 .content-heading {
     text-align: left;
     border-bottom: 1px solid transparent;
