--- a/source/app/components/wii-explorer/wii-explorer.html
+++ b/source/app/components/wii-explorer/wii-explorer.html
@@ -1,10 +1,6 @@
 <div style='display:flex;flex-direction:column;height:100%;margin-bottom:0;' class="panel panel-default" style='height:100%;margin:0;'>
     <div class="panel-heading">
-        <h4 style='margin-right: 1em;'>Inventory</h4>
-    </div>
-    <div style='background-color:white;border:none;' class="panel-heading">
-        <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;" class="fa fa-search"></i>
-        <input type='text' style='flex:1; margin-left: -26px; padding-left: 32px;' ng-model='wiiExplorer.filter' size='10'>
+        <h4 style='flex:1;margin-right: 1em;'>Inventory</h4>
         <button type="button" class="btn btn-default"
             data-toggle="tooltip"
             title="Refresh inventory"
@@ -38,6 +34,10 @@
                 <li><wi-button name="ImportWellTopButton" icon="las-import-16x16" label="Import Well Top" layout="icon-left" type="small" class="height-auto" container="explorer" handler="wiiExplorer.ImportWellTopButtonClicked"></wi-button></li>
             </ul>
         </div>
+    </div>
+    <div style='background-color:white;border:none;' class="panel-heading">
+        <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;" class="fa fa-search"></i>
+        <input type='text' style='flex:1; margin-left: -26px; padding-left: 32px;' ng-model='wiiExplorer.filter' size='10'>
     </div>
     <div style='flex:1;display:flex;padding:0px;' class="panel-body">
         <wi-scroll style='flex:1;display:flex;flex-direction:column;' up-trigger="wiiExplorer.upTrigger" down-trigger="wiiExplorer.downTrigger">
