--- a/source/components/wi-scroll/wi-scroll.html
+++ b/source/components/wi-scroll/wi-scroll.html
@@ -1,7 +1,7 @@
 <style>
     .scroll-container {
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
         width: 100%;
         //height: 400px;
     }
