Fix crossplot options tab

--- a/source/app/components/wi-d3-crossplot/wi-d3-crossplot.html
+++ b/source/app/components/wi-d3-crossplot/wi-d3-crossplot.html
@@ -1,5 +1,5 @@
 <div class='d3-crossplot-region' style="flex:1;display:flex; flex-direction:column">
-    <h4>Crossplot: {{wiD3Crossplot.crossplotModel.properties.name}}</h4>
+    <h4>Crossplot: {{(wiD3Crossplot.crossplotModel.properties.title || {}).title || wiD3Crossplot.crossplotModel.properties.name}}</h4>
     <h5>Reference: [{{wiD3Crossplot.crossplotModel.properties.pointsets[0].intervalDepthTop | toFixed2}} - {{wiD3Crossplot.crossplotModel.properties.pointsets[0].intervalDepthBottom | toFixed2}}]</h5>
     <div class='crossplot-container position-relative' id='{{wiD3Crossplot.crossplotAreaId}}'>
         <div style="display:flex;flex-direction:column;flex:1;">
