--- a/source/app/components/wi-logplot/wi-logplot.less
+++ b/source/app/components/wi-logplot/wi-logplot.less
@@ -13,7 +13,8 @@ wi-logplot {
         .scale {
             display: inline-block;
             margin: 0 1em;
-            line-height: 32px;
+            line-height: 28px;
+            padding-top: 4px;
         }
     }
 
