--- a/source/app/components/wi-inventory/wi-inventory.html
+++ b/source/app/components/wi-inventory/wi-inventory.html
@@ -32,7 +32,7 @@
             <wi-item-dropdown style='flex:1;margin:5px 0;' class='height24px' icon="'project-open-16x16'" on-wi-dropdown-init='wiInventory.getProjectList' on-item-changed="wiInventory.projectChanged">
             </wi-item-dropdown>
         </div>
-        <wi-scroll style='flex:1;display:flex;flex-direction:column;' up-trigger='wiInventory.upTriggerPrj', down-trigger='wiInventory.downTriggerPrj'>
+        <wi-scroll id-scroll="'projectTreeScroll'" style='flex:1;display:flex;flex-direction:column;' up-trigger='wiInventory.upTriggerPrj', down-trigger='wiInventory.downTriggerPrj'>
             <wi-base-treeview name="projectTreeview" 
                 config="wiInventory.projectConfig" 
                 container="wiInventory" 
@@ -52,6 +52,7 @@
             <h5>Import Queue</h5>
         </div>
         <wi-base-treeview name="PendingQueueTreeview" 
+            style="overflow-x:hidden;overflow-y:auto;"
             config="wiInventory.importItems" 
             container="wiInventory" 
             on-click-function="wiInventory.pendingQueueClickFunction"
@@ -76,7 +77,9 @@
                 <i class="fa fa-exchange"></i>
             </button>
         </div>
-        <wi-scroll style='flex:1;display:flex;flex-direction:column;' up-trigger="wiInventory.upTrigger" down-trigger="wiInventory.downTrigger">
+        <wi-scroll style='flex:1;display:flex;flex-direction:column;' 
+            id-scroll="'inventoryTreeScroll'"
+            up-trigger="wiInventory.upTrigger" down-trigger="wiInventory.downTrigger">
             <wi-base-treeview name="inventoryTreeview" 
                 config="wiInventory.inventoryConfig" 
                 container="wiInventory" 
