--- a/source/app/components/wi-predict-model/template/create-model.html
+++ b/source/app/components/wi-predict-model/template/create-model.html
@@ -47,11 +47,53 @@
         <label class="control-label col-sm-3">Batch size</label>
         <input class="form-control wi-form-control" type="number" step="10" ng-model="createCtrl.params['batch_size']" id="batch_size">
     </div>
-    <div class="form-group form-inline" >
+    <div class="form-group form-inline container-fluid" style="padding-left: 0">
+        <label class="control-label col-sm-3">Chose data</label>
+        <label class="col-sm-3">Well
+            <ui-select ng-model="createCtrl.well"
+                        on-select="createCtrl.changeWell()"
+                        class="normal-text">
+                <ui-select-match placeholder='Select a curve'>
+                    {{createCtrl.well.name}}
+                </ui-select-match>
+                <ui-select-choices  position="down"
+                                    repeat='well in createCtrl.wells | filter:{name:$select.search} track by well.idWell' >
+                    <div class="normal-text">{{well.name}}</div>
+                </ui-select-choices>
+            </ui-select>
+        </label>
+        <label class="control-label col-sm-3">Dataset
+            <ui-select ng-model="createCtrl.dataset"
+                on-select="createCtrl.changeDateset()"
+                class="normal-text">
+                <ui-select-match placeholder='Select a dataset'>
+                    {{createCtrl.dataset.name}}
+                </ui-select-match>
+                <ui-select-choices  position="down"
+                                    repeat='dataset in createCtrl.datasets | filter:{name:$select.search} track by dataset.idDataset' >
+                    <div class="normal-text">{{dataset.name}}</div>
+                </ui-select-choices>
+            </ui-select>
+        </label>
+        <label class="control-label col-sm-3">Curve
+            <ui-select ng-model="createCtrl.curve"
+                        on-select="createCtrl.changeCurve()"
+                        class="normal-text">
+                <ui-select-match placeholder='Select a curve'>
+                    {{createCtrl.curve.name}}
+                </ui-select-match>
+                <ui-select-choices  position="down"
+                                    repeat='curve in createCtrl.curves | filter:{name:$select.search} track by curve.idCurve' >
+                    <div class="normal-text">{{curve.name}}</div>
+                </ui-select-choices>
+            </ui-select>
+        </label>
+    </div>
+    <!-- <div class="form-group form-inline" >
         <label class="control-label col-sm-3">Dataset</label>
         <label> Data <input class="form-control wi-form-control" type="file" id="data" accept=".csv" on-read-file="createCtrl.read_data($fileContent)"  required="true"></label>
         <label> Target <input class="form-control wi-form-control" type="file" id="target" accept=".csv" on-read-file="createCtrl.read_target($fileContent)"  required="true"></label>
-    </div>
+    </div> -->
     <div class="form-group form-inline">
         <label class="control-label col-sm-3">Description</label>
         <input class="form-control wi-form-control" type="text" ng-model="createCtrl.description" class="form-control"  required />
