--- a/source/app/components/wi-predict-model/template/retrain-model.html
+++ b/source/app/components/wi-predict-model/template/retrain-model.html
@@ -18,10 +18,47 @@
         <label class="control-label col-sm-3">Learning rate</label>
         <input class="form-control wi-form-control" type="number" step="0.001" ng-model="retrainCtrl.params['learning_rate']" required>
     </div>
-    <div class="form-group form-inline">
-        <label class="control-label col-sm-3">Dataset</label>
-        <label class="control-label"> Data <input class="form-control wi-form-control" type="file" id="data" accept=".csv" on-read-file="retrainCtrl.read_data($fileContent)" required></label>
-        <label class="control-label"> Target <input class="form-control wi-form-control" type="file" id="target" accept=".csv" on-read-file="retrainCtrl.read_target($fileContent)" required></label>
+    <div class="form-group form-inline container-fluid" style="padding-left: 0">
+        <label class="control-label col-sm-3">Chose data</label>
+        <label class="col-sm-3">Well
+            <ui-select ng-model="retrainCtrl.well"
+                        on-select="retrainCtrl.changeWell()"
+                        class="normal-text">
+                <ui-select-match placeholder='Select a curve'>
+                    {{retrainCtrl.well.name}}
+                </ui-select-match>
+                <ui-select-choices  position="down"
+                                    repeat='well in retrainCtrl.wells | filter:{name:$select.search} track by well.idWell' >
+                    <div class="normal-text">{{well.name}}</div>
+                </ui-select-choices>
+            </ui-select>
+        </label>
+        <label class="control-label col-sm-3">Dataset
+            <ui-select ng-model="retrainCtrl.dataset"
+                on-select="retrainCtrl.changeDateset()"
+                class="normal-text">
+                <ui-select-match placeholder='Select a dataset'>
+                    {{retrainCtrl.dataset.name}}
+                </ui-select-match>
+                <ui-select-choices  position="down"
+                                    repeat='dataset in retrainCtrl.datasets | filter:{name:$select.search} track by dataset.idDataset' >
+                    <div class="normal-text">{{dataset.name}}</div>
+                </ui-select-choices>
+            </ui-select>
+        </label>
+        <label class="control-label col-sm-3">Curve
+            <ui-select ng-model="retrainCtrl.curve"
+                        on-select="retrainCtrl.changeCurve()"
+                        class="normal-text">
+                <ui-select-match placeholder='Select a curve'>
+                    {{retrainCtrl.curve.name}}
+                </ui-select-match>
+                <ui-select-choices  position="down"
+                                    repeat='curve in retrainCtrl.curves | filter:{name:$select.search} track by curve.idCurve' >
+                    <div class="normal-text">{{curve.name}}</div>
+                </ui-select-choices>
+            </ui-select>
+        </label>
     </div>
     <div class="form-group form-inline">
         <button class="btn btn-primary" ng-click="retrainCtrl.retrain()">Retrain</button>
