--- a/source/app/components/wii-explorer/wii-explorer.html
+++ b/source/app/components/wii-explorer/wii-explorer.html
@@ -37,7 +37,7 @@
     </div>
     <div style='background-color:white;border:none;' class="panel-heading">
         <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;" class="fa fa-search"></i>
-        <input type='text' style='flex:1; margin-left: -26px; padding-left: 32px;' ng-model='wiiExplorer.filter' size='10'>
+        <input type='text' style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;' ng-model='wiiExplorer.filter' size='10'>
     </div>
     <div style='flex:1;display:flex;padding:0px;' class="panel-body">
         <wi-scroll style='flex:1;display:flex;flex-direction:column;' up-trigger="wiiExplorer.upTrigger" down-trigger="wiiExplorer.downTrigger">
