--- a/source/app/components/wi-logplot/template/wi-logplot.html
+++ b/source/app/components/wi-logplot/template/wi-logplot.html
@@ -1,13 +1,15 @@
 <div ng-if="wiLogplot.showToolbar" class="logplot-toolbar-wrapper" ng-class="{'crop-display':wiLogplot.cropDisplay}">
     @@include('./toolbar/index.html')
-    <div class="scale">
-        <span ng-if="wiLogplot.currentView">Current View [{{wiLogplot.currentView[0]}},{{wiLogplot.currentView[1]}}]</span>
-        &nbsp;
-        <span ng-if="wiLogplot.displayView">Display View [{{wiLogplot.displayView[0]}},{{wiLogplot.displayView[1]}}]</span>
-    </div>
 </div>
 <div class="logplot-header">
-    <span class="well-name" ng-bind="wiLogplot.wellModel.properties.name"></span>
+    <div class="well-name-container">
+        <div class="well-name" ng-bind="wiLogplot.wellModel.properties.name"></div>
+    </div>
+    <div class="scale-container">
+        <div ng-if="wiLogplot.currentView">Current View [{{wiLogplot.currentView[0]}},{{wiLogplot.currentView[1]}}]</div>
+        &nbsp;
+        <div ng-if="wiLogplot.displayView">Display View [{{wiLogplot.displayView[0]}},{{wiLogplot.displayView[1]}}]</div>
+    </div>
 </div>
 <div class="logplot-main-content">
     <div class='slidingbar'>
