--- a/source/app/components/wi-logplot/wi-logplot.less
+++ b/source/app/components/wi-logplot/wi-logplot.less
@@ -28,8 +28,10 @@ wi-logplot {
         }
         .scale-container {
             display: flex;
-            flex-wrap: nowrap;
+            flex-grow: 1;
             flex-shrink: 0;
+            flex-wrap: nowrap;
+            justify-content: flex-end;
             margin: 0 1em;
         }
     }
