--- a/source/app/components/wii-explorer/wii-explorer.html
+++ b/source/app/components/wii-explorer/wii-explorer.html
@@ -40,7 +40,7 @@
         <input type='text' style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;' ng-model='wiiExplorer.filter' size='10'>
     </div>
     <div style='flex:1;display:flex;padding:0px;' class="panel-body">
-        <wi-scroll style='flex:1;display:flex;flex-direction:column;width:100%;' up-trigger="wiiExplorer.upTrigger" down-trigger="wiiExplorer.downTrigger">
+        <wi-scroll id-scroll="'wiiExpWellList'" style='flex:1;display:flex;flex-direction:column;width:100%;' up-trigger="wiiExplorer.upTrigger" down-trigger="wiiExplorer.downTrigger">
             <wi-base-treeview
                 name='wiiExplorer.treeViewName'
                 container='wiiExplorer'
