--- a/source/components/wi-base-treeview/wi-base-treeview.html
+++ b/source/components/wi-base-treeview/wi-base-treeview.html
@@ -1,4 +1,4 @@
-<div class="wi-treeview-container"
+<div class="wi-treeview-container" style="background-color:{{wiBaseTreeview.config[$index].data.bgColor||none}}"
      ng-class='{"rootview": wiBaseTreeview.name}'
      ng-repeat="item in wiBaseTreeview.config track by $index"
      ng-if='!item.data.deleted'>
@@ -17,9 +17,12 @@
                         'fa-caret-right': !item.data.childExpanded,
                         'wi-hidden': item.children == null || item.children.length == 0}"></i>
             </div>
-            <div ng-click="wiBaseTreeview.onClick($index, $event, item)"
+            <div class="item-content" ng-click="wiBaseTreeview.onClick($index, $event, item)"
                 ng-dblclick="wiBaseTreeview.onDoubleClick($index);">
-                <div class="display-inline-block margin-right-0_5em"><span class="{{item.data.icon}}"></span></div>
+                <div class="display-inline-block margin-right-0_5em">
+                    <span class="{{item.data.icon}}"></span>
+                    <div ng-show="wiBaseTreeview.config[$index].id" class='wi-parent-id'>{{wiBaseTreeview.config[$index].id}}</div>
+                </div>
                 <span ng-if="wiBaseTreeview.isShowParentName && item.parentData">{{item.parentData.label}} /</span>
                 <span ng-if="wiBaseTreeview.isShowParentName && item.parentDataArr" ng-repeat="parentData in item.parentDataArr">{{parentData.label}} /&nbsp;</span>
                 <span title="{{item.data.toggle?item.data.label:item.data.tooltip}}">{{item.data.toggle?item.data.tooltip:item.data.label}}</span>
