--- a/source/components/wi-base-treeview/wi-base-treeview.less
+++ b/source/components/wi-base-treeview/wi-base-treeview.less
@@ -1,9 +1,18 @@
+@keyframes appear {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
 wi-base-treeview {
     display: block;
     background: #fff;
     font-size: 13px;
     margin-left: -5px;
     .wi-treeview-container {
+        transition: background-color 1s ease-in-out;
         display: block;
         // cursor: pointer;
         padding-left: 12px;
@@ -37,17 +46,26 @@ wi-base-treeview {
                     &:hover {
                         color: #333
                     }
-                    > i {
+                    & > i {
                         width: 100%;
                         text-align: center;
                     }
                 }
-                &>div:nth-child(2) {
+                &>div.item-content {
                     flex: 1;
                     text-overflow: ellipsis;
                     overflow: hidden;
-                    span{
-                        vertical-align: middle;
+                    .wi-parent-id {
+                        font-size: 80%;
+                        display:inline-block;
+                        line-height: 1.3em;
+                        padding: 0 3px;
+                        position: relative;
+                        right:3px;
+                        top:3px;
+                        border-radius: 3px;
+                        border:1px solid;
+                        opacity: 0.6;
                     }
                 }
 
@@ -63,7 +81,6 @@ wi-base-treeview {
             background: #f0f0f0;
         }
     }
-
     .rootview {
         padding-left: 0;
     }
