--- a/source/app/components/wii-explorer/wii-explorer.html
+++ b/source/app/components/wii-explorer/wii-explorer.html
@@ -47,7 +47,8 @@
                 config='wiiExplorer.treeConfig'
                 on-click-function='wiiExplorer.clickFunction'
                 show-context-menu-function='wiiExplorer.showContextMenu'
-                filter='{{wiiExplorer.filter}}'>
+                filter='{{wiiExplorer.filter}}'
+                show-id='true'>
             </wi-base-treeview>
             <!--<wi-treeview contextmenuholder="wiiExplorer.name" name="wiiExplorer.treeViewName" config="wiiExplorer.treeConfig" container="wiiExplorer" filter='{{wiiExplorer.filter}}'>
             </wi-treeview>-->
