--- a/source/app/components/wii-items/wii-items.less
+++ b/source/app/components/wii-items/wii-items.less
@@ -20,6 +20,7 @@ wii-items {
         bottom: 0;
         left: 0;
         right: 0;
+        overflow-y: auto;
     }
     tr:first-child {
         height: 1.2em;
