--- a/source/app/components/wii-properties/wii-properties.html
+++ b/source/app/components/wii-properties/wii-properties.html
@@ -1,8 +1,9 @@
 <div class="panel panel-default">
     <div class="panel-heading"><h4>Properties</h4></div>
     <div class="panel-body">
-        <wi-list name="{{config.name}}" heading="{{config.heading}}" items="config.data"
-                ng-repeat="config in wiiProperties.listConfig ">
+        <wi-list ng-repeat="config in wiiProperties.listConfig" 
+            name="{{config.name}}" heading="{{config.heading}}" items="config.data"
+            on-change-func='wiiProperties.onChange'>
         </wi-list>
     </div>
 </div>
