--- a/source/components/wi-multi-input/wi-multi-input.less
+++ b/source/components/wi-multi-input/wi-multi-input.less
@@ -7,11 +7,10 @@ wi-multi-input{
         min-width: -webkit-fill-available;
     }
     .caret {
-        float: right;
-        margin-right: 5px;
-        margin-top: 6px;
-        border-top: 6px solid;
-        border-right: 3px solid transparent;
-        border-left: 3px solid transparent;
+        position: absolute;
+        right: 10px;
+        margin-top: -2px;
+        top: 50%;
+        height: 10px;
     }
 }
