update zoom factor for object track, image track and zone track

--- a/source/less/graph.less
+++ b/source/less/graph.less
@@ -162,7 +162,7 @@
     }
 }
 
-.vi-log-track-container, .vi-depth-track-container {
+.vi-log-track-container, .vi-depth-track-container, .vi-image-track-container, .vi-object-track-container, .vi-zone-track-container{
     .tooltip-line {
         stroke: black;
         stroke-dasharray: 2, 1;
