--- a/source/app/components/wi-histogram/template/wi-histogram.html
+++ b/source/app/components/wi-histogram/template/wi-histogram.html
@@ -15,7 +15,9 @@
         <div style='flex:1; display: flex;flex-direction:column;margin:0px 14px'>
             <wi-d3-histogram style="width: 100%; flex: 1; display: flex;"
                 name='{{wiHistogram.wiD3AreaName}}'
-                wi-histogram-ctrl='wiHistogram' container-name="{{wiHistogram.containerName}}"></wi-d3-histogram>
+                wi-histogram-ctrl='wiHistogram'
+                container-name="{{wiHistogram.containerName}}"
+                selection-masks='$parent.selectionMasks'></wi-d3-histogram>
             <!--<wi-d3-histogram style="width: 100%; flex: 1; display: flex;"
                 name='{{wiHistogram.wiD3AreaName}}'
                 id-histogram='wiHistogram.id'></wi-d3-histogram>-->
