--- a/source/app/components/wi-crossplot/template/wi-crossplot.html
+++ b/source/app/components/wi-crossplot/template/wi-crossplot.html
@@ -10,6 +10,7 @@
     <wi-d3-crossplot style="width: 100%; flex: 1; display: flex;margin-left:14px;"
         name='{{wiCrossplot.wiD3CrossplotName}}'
         container-name="{{wiCrossplot.containerName}}"
+        selection-masks='$parent.selectionMasks'
         wi-crossplot-ctrl='wiCrossplot'>
     </wi-d3-crossplot>
     <div resizable r-directions="['left']" r-flex="true" 
