--- a/source/app/components/wi-explorer-treeview/wi-explorer-treeview.html
+++ b/source/app/components/wi-explorer-treeview/wi-explorer-treeview.html
@@ -5,6 +5,6 @@
 	on-ready-function='wiExplorerTreeview.onReady'
 	on-click-function='wiExplorerTreeview.onClick'
 	show-context-menu-function='wiExplorerTreeview.showContextMenu'
-	filter='{{wiExplorerTreeview.filter}}'
-	filter-by='{{wiExplorerTreeview.filterBy}}'>
+	filter='{{wiExplorerTreeview.filter}}'>
 </wi-base-treeview>
+<!--filter-by='{{wiExplorerTreeview.filterBy}}' -->
