--- a/source/app/components/wi-workflow/wi-workflow.html
+++ b/source/app/components/wi-workflow/wi-workflow.html
@@ -1,3 +1,4 @@
 <!-- <div>WorkFlow</div> -->
 <!-- <div ng-transclude></div> -->
-<wi-step input-config="[{name:'Formation Resistivity'}, {name: 'Porosity'}]"></wi-step>
+<wi-step name='VCLfromGammaRayStep' id-project='wiWorkflow.getCurrentProjectId();' input-config="wiWorkflow.inputConfig"
+    parameter-config="wiWorkflow.parameterConfig"></wi-step>
