--- a/source/app/components/wi-inventory/wi-inventory.html
+++ b/source/app/components/wi-inventory/wi-inventory.html
@@ -8,7 +8,7 @@
         border-radius: 5px;
         overflow: hidden;
         margin: 10px;
-        //padding: 10px;
+        /* padding: 10px; */
         box-shadow: inset 1px 1px 1px #e1e1e1;
         background-color: #ffffff;
     }
