--- a/source/app/components/wi-predict-model/wi-predict-model.less
+++ b/source/app/components/wi-predict-model/wi-predict-model.less
@@ -23,7 +23,7 @@ wi-predict-model {
 	#left li{
 		list-style: none;
 		padding: 5px;
-		border-bottom: 0.5px solid #a8aab4;
+		border-bottom: 0.5px solid #e6e6e6;
 	}
 	.nav-pilss, .nav-pills>li {
 		float: none;
@@ -41,7 +41,7 @@ wi-predict-model {
 		overflow-y: auto;
 	}
 	.form-group.form-inline{
-		border-top: 1px solid #a8aab4;
+		border-top: 1px solid #e6e6e6;
 		padding-top: 10px;
 	}	
 	thead, tbody{
