--- a/source/app/components/wi-workflow/wi-workflow.html
+++ b/source/app/components/wi-workflow/wi-workflow.html
@@ -1,4 +1,5 @@
 <!-- <div>WorkFlow</div> -->
 <!-- <div ng-transclude></div> -->
-<wi-step name='VCLfromGammaRayStep' id-project='wiWorkflow.getCurrentProjectId();' input-config="wiWorkflow.inputConfig"
-    parameter-config="wiWorkflow.parameterConfig"></wi-step>
+<!-- <wi-workflow-player name='VCLfromGammaRayStep' id-project='wiWorkflow.getCurrentProjectId();' input-config="wiWorkflow.inputConfig"
+    parameter-config="wiWorkflow.parameterConfig"></wi-workflow-player> -->
+<wi-workflow-player name='VCLfromGammaRayStep' id-project='wiWorkflow.getCurrentProjectId();' workflow-config="wiWorkflow.workflowConfig"></wi-workflow-player>
